<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="smart.rowan.Fragment.OwnerFragment">

        <ProgressBar
            android:id="@+id/createProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:visibility="invisible" />

        <ScrollView
            android:id="@+id/signupScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="45dp"
            android:layout_marginTop="0dp"
            android:fillViewport="true">

            <LinearLayout
                android:id="@+id/linear_create_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/createRestId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|top"
                    android:layout_marginTop="20dp"
                    android:text="@string/createRestaurant"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/rowan"
                    android:textSize="40sp" />

                <EditText
                    android:id="@+id/restID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:hint="@string/restaurant_id"
                    android:inputType="textVisiblePassword" />

                <EditText
                    android:id="@+id/restName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:hint="@string/restaurant_name"
                    android:inputType="textVisiblePassword" />

                <EditText
                    android:id="@+id/restPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:ems="10"
                    android:hint="@string/phoneNum"
                    android:inputType="phone" />

                <EditText
                    android:id="@+id/restAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:hint="@string/restaurant_address"
                    android:inputType="textVisiblePassword" />

            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/createRestBtn"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:background="@android:color/holo_red_dark"
            android:text="@string/createNewRestaurant"
            android:textColor="@android:color/primary_text_dark"
            android:textStyle="bold" />

    </RelativeLayout>
</layout>