<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:id="@+id/loginRelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#192b3b"
        tools:context="smart.rowan.SignupActivity">

        <ProgressBar
            android:id="@+id/signupProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:visibility="invisible" />

        <ScrollView
            android:id="@+id/signupScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="45dp"
            android:layout_marginTop="0dp"
            android:fillViewport="true">

            <LinearLayout
                android:id="@+id/linear_signup_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:text="@string/app_name"
                    android:textAlignment="center"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@android:color/white"
                    android:textSize="70sp" />

                <LinearLayout
                    android:layout_marginTop="24dp"
                    android:id="@+id/name_linear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/firstName"
                        android:layout_width="182dp"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/firstname"
                        android:inputType="textVisiblePassword"
                        android:paddingEnd="0dp"
                        android:paddingStart="10dp"
                        android:textColor="@android:color/white"
                        android:textColorHighlight="#ffffff"
                        android:textColorHint="@color/rowanAccent"
                        android:nextFocusDown="@+id/lastName" />

                    <EditText
                        android:id="@+id/lastName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/lastname"
                        android:inputType="textVisiblePassword"
                        android:paddingEnd="0dp"
                        android:paddingStart="10dp"
                        android:textColor="@android:color/white"
                        android:textColorHighlight="#ffffff"
                        android:textColorHint="@color/rowanAccent" />
                </LinearLayout>

                <android.support.design.widget.TextInputLayout
                    style="@style/textLayout"
                    app:hintTextAppearance="@style/rowanAccent">

                    <EditText
                        android:id="@+id/email"
                        style="@style/signUpEditText"
                        android:drawableStart="@drawable/ic_email_white_36dp"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    style="@style/textLayout"
                    app:hintTextAppearance="@style/rowanAccent">

                    <EditText
                        android:id="@+id/password"
                        style="@style/signUpEditText"
                        android:drawableStart="@drawable/ic_lock_white_36dp"
                        android:hint="@string/password" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    style="@style/textLayout"
                    app:hintTextAppearance="@style/rowanAccent">

                    <EditText
                        android:id="@+id/confirmPassword"
                        style="@style/signUpEditText"
                        android:drawableStart="@drawable/ic_lock_white_36dp"
                        android:hint="@string/confirm_password" />

                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                    android:id="@+id/term_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="0dp"
                    android:layout_marginStart="20dp">

                    <android.support.v7.widget.AppCompatCheckBox
                        android:id="@+id/checkAgree"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:text="@string/agree"
                        android:buttonTint="@color/rowanAccent"
                        android:textColor="@android:color/white" />

                    <TextView
                        android:id="@+id/term"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:text="@string/term"
                        android:textColor="@android:color/white" />

                </LinearLayout>

                <TextView
                    android:id="@+id/signIn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="30dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/back_login"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />

            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/signUpBtn"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:background="@android:color/holo_red_dark"
            android:text="@string/sign_up"
            android:textColor="@android:color/primary_text_dark"
            android:textStyle="bold" />

    </RelativeLayout>
</layout>