<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout

        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="smart.rowan.LoginActivity"
        android:background="#192b3b"
        android:id="@+id/loginRelativeLayout">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/loginProgressBar"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:visibility="invisible" />

        <ScrollView
            android:id="@+id/loginScrollView"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="45dp">

            <LinearLayout
                android:id="@+id/linearLoginForm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/app_name"
                    android:id="@+id/title"
                    android:textColor="@android:color/white"
                    android:textSize="70sp"
                    android:textAlignment="center"
                    android:layout_marginBottom="55dp"
                    android:layout_marginTop="40dp" />

                <android.support.design.widget.TextInputLayout
                    style="@style/textLayout"
                    app:hintTextAppearance="@style/rowanAccent">

                    <EditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:textColor="@android:color/white"
                        android:drawableStart="@drawable/ic_person_white_36dp"
                        android:drawablePadding="20dp"
                        android:imeOptions="actionNext"
                        android:imeActionId="@+id/password" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    style="@style/textLayout"
                    app:hintTextAppearance="@style/rowanAccent">

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:imeActionId="@+id/login"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:textColor="@color/white"
                        android:maxLines="1"
                        android:drawableStart="@drawable/ic_lock_white_36dp"
                        android:drawablePadding="20dp" />

                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forgot"
                    android:id="@+id/forgotPassword"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:textStyle="italic"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_account"
                    android:id="@+id/signUpBtn"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="30dp" />

            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/signInBtn"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/sign_in"
            android:textStyle="bold"
            android:background="@android:color/holo_red_dark"
            android:textColor="@android:color/primary_text_dark"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true" />

    </RelativeLayout>
</layout>